# svls

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  snapcraft.yaml
.github/: dependabot.yml
.github/workflows/: release.yml
movie/: test.cast  test.sh  test.sv
src/: backend.rs  config.rs  main.rs
