[package]
name = "svls"
version = "0.2.11"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/svls"
keywords = ["lsp", "language-server", "verilog", "systemverilog"]
categories = ["development-tools"]
license = "MIT"
readme = "README.md"
description = "SystemVerilog language server"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "Prepare to v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = ""
pre-release-replacements   = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/svls/compare/v{{version}}...Unreleased) - ReleaseDate"},
    {file="snapcraft.yaml", search="version v[0-9\\.]+", replace="version v{{version}}"},
]

[dependencies]
anyhow       = "1"
clap         = {version = "3.2.2", features = ["derive"]}
enquote      = "1"
log          = "0.4"
serde        = {version = "1", features = ["derive"]}
serde_json   = "1"
simplelog    = "0.12"
svlint       = "0.9.3"
sv-parser    = "0.13.3"
tokio        = {version = "1.6", features = ["io-std", "macros", "rt", "test-util"]}
toml         = "0.8"
tower-lsp    = "0.20"

[profile.release]
codegen-units = 1

#[patch.crates-io]
#sv-parser = {path = "../sv-parser/sv-parser"}
#svlint    = {path = "../svlint"}
